[tool.poetry]
name = "url_shortener"
version = "0.0.1"
description = "A Python-based URL shortener built with FastAPI"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
fastapi = "^0.104.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
